--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 div.container {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 div.img-strip {
@@ -14,12 +15,13 @@ div.img-strip {
 
 @media screen and (max-width: 540px) {
   div.img-strip {
-    height: 1080px;
+    max-height: 600px;
     background-color: #000;
     background-image: url(../img/cover.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    overflow: hidden;
   }
 }
 
